--- a/sample_notebook.ipynb
+++ b/sample_notebook.ipynb
@@ -17,6 +17,24 @@
    "source": [
     "print(\"Hello\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fe13cd21-d1c2-4c23-a241-ae2ca34f10bc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Github\")"
+   ]
   }
  ],
  "metadata": {
